# dotfiles

./: .gitconfig_shared  .vimrc  .zshrc.base  LICENSE
.agents/: CODEX_WORKFLOWS.md
.agents/skills/command-risk-review/: SKILL.md
.agents/skills/commit-preflight/: SKILL.md
.agents/skills/implement-from-spec/: SKILL.md
.agents/skills/review-triage/: SKILL.md
.agents/skills/sdd-spec/: SKILL.md
.agents/skills/spec-review/: SKILL.md
.agents/skills/task-autopilot/: SKILL.md
.bin/: install.sh
.codex/: config.toml
.codex/hooks/: permission_request.py
.config/Code/User/: install-vscode-helper.sh  install-vscode.sh  keybindings.json  settings.json  vscode-extension-helper.sh  vscode-extension.sh
.config/conda/: install_miniconda_helper.sh  requirements.chromebook.common.txt  requirements.chromebook.tf.txt
.config/nvim/: .gitignore  README.md  init.lua  lazy-lock.json
.config/nvim/lua/custom/plugins/: barbar.lua  codeium.lua  colorscheme.lua  copilot.lua  goto-preview.lua  indent-blackline.lua  java.lua  lazy-java.lua  lspsaga.lua  mini-indentscope.lua  neo-tree.lua  none-ls.lua  nvim-java.lua  php.lua  python.lua  telescope.lua  toggleterm.lua  venv-selector.lua
.config/nvim/lua/custom/util/: lsp.lua  root.lua  telescope.lua
.config/vim/plugin_tomls/: dein.toml  dein_lazy.toml
.config/wezterm/: keybinds.lua  wezterm.lua
.jupyter/: jupyter_nbconvert_config.json  jupyter_notebook_config.py
.jupyter/nbconfig/: notebook.json
.local/share/jupyter/: install-nbextension-helper.sh  snippets.json
.local/share/python-default/: pyproject.toml
(+1 files in other folders)
