[project]
name = "python-default"
version = "0.1.0"
description = "Default python project. The uv does not install Python to system. This project is referenced as default python environment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.391",
    "ruff>=0.9.1",
]
